
	* lib/test/unit/autorunner.rb (Test::Unit::AutoRunner.run,
	  Test::Unit::AutoRunner#process_args): take test list to run and
	  options.

	* lib/test/unit/autorunner.rb (Test::Unit::AutoRunner::RUNNERS,
	  Test::Unit::AutoRunner#run): should not exit inside a library,
	  just return the result instead.

	* lib/test/unit.rb: ditto.

	* test/runner.rb: exit with the test result.

Tue Dec  2 20:03:20 2003  Minero Aoki  <aamine@loveruby.net>

	* test/fileutils/test_fileutils.rb: check if Pathnames are usable
	  for arguments.

Tue Dec  2 04:22:00 2003  Nathaniel Talbott  <ntalbott@ruby-lang.org>

	* lib/test/unit/assertions.rb: fixed #assert_no_match message.

	* test/testunit/test_assertions.rb: ditto.

Tue Dec  2 00:43:00 2003  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/syck.c: string buffering bug.  decrementing by full
	  max_size now. [ruby-core:01834]

Mon Dec  1 21:33:08 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (num_sadded): prohibit singleton method definition for
	  Numerics.  fill yet another gap between Fixnum and Bignum.

Mon Dec  1 17:33:47 2003  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (htov16): converts endian using swap16. htov32(), hton16,
	  hton32 as well. [ruby-talk:85377]

	* pack.c (swap16): swap 2 bytes no matter how big short is on the
	  platform.  swap32() is also prepared.

	* numeric.c (rb_num2int): returns long to preserve information.
	  rb_fix2int(), rb_num2uint(), rb_fix2uint() as well.
	  [ruby-talk:85377]

	* numeric.c (rb_num2uint): should not check for value range if the
	  source value is negative.

Mon Dec  1 17:14:34 2003  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* sample/optparse/opttest.rb: added.

Mon Dec  1 16:10:52 2003  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/rdoc.rb: (etc) initial merge into main tree.

Mon Dec  1 14:17:49 2003  Minero Aoki  <aamine@loveruby.net>

	* lib/fileutils.rb (fu_each_src_dest0): call #to_str to allow